improved everything + configured rofi

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2536,7 +2536,7 @@ background_opacity 0.7
 
 
 # BEGIN_KITTY_THEME
-# Catppuccin-Mocha
+# Duskfox
 include current-theme.conf
 # END_KITTY_THEME
 
