--- a/i3/config
+++ b/i3/config
@@ -59,13 +59,13 @@ tiling_drag modifier titlebar
 bindsym $mod+Return exec kitty
 
 # kill focused window
-bindsym $mod+q kill
+bindsym $mod+shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run
+bindsym $mod+d exec /home/raven/exec/launcher.sh
 
 # A more modern dmenu replacement is rofi:
-#bindcode $mod+40 exec "rofi -modi drun,run -show drun"
+#bindcode $mod+d exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
@@ -106,7 +106,6 @@ bindsym $mod+f fullscreen toggle
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
@@ -117,18 +116,21 @@ bindsym $mod+space focus mode_toggle
 # focus the parent container
 bindsym $mod+a focus parent
 
+#bind mod+e to open fe
+bindsym $mod+e exec thunar 
+
 # focus the child container
 #bindsym $mod+d focus child
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1: Nothing"
-set $ws2 "2: Firefox"
-set $ws3 "3: Terminal"
-set $ws4 "4: Spotify"
-set $ws5 "5: File Manager" 
-set $ws6 "6: Obsidian"
-set $ws7 "7:"
+set $ws1 "1"
+set $ws2 "2"
+set $ws3 "3"
+set $ws4 "4"
+set $ws5 "5" 
+set $ws6 "6"
+set $ws7 "7"
 set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
@@ -156,6 +158,7 @@ bindsym $mod+Shift+7 move container to workspace number $ws7
 bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
+
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -211,17 +214,17 @@ bindsym $mod+l exec betterlockscreen -l dim
 
 # window colors
 # Color shemes for windows 
-#set $bgcolor    #523d64
-#set $in-bgcolor #363636
-#set $text       #ffffff
-#set $u-bgcolor  #ff0000
-#set $indicator  #a8a3c1
-#set $in-text    #969696
+set $bgcolor    #ffffff
+set $in-bgcolor #ffffff
+set $text       #ffffff
+set $u-bgcolor  #ffffff
+set $indicator  #ffffff
+set $in-text    #ffffff
 #                       border          background      text            indicator (a line which shows where the next window will be placed)     
-#client.focused          $bgcolor        $bgcolor        $text           $indicator
-#client.unfocused        $in-bgcolor     $in-bgcolor     $in-text        $in-bgcolor
-#client.focused_inactive $in-bgcolor     $in-bgcolor     $in-text        $in-bgcolor
-#client.urgent           $u-bgcolor      $u-bgcolor      $text           $u-bgcolor 
+client.focused          $bgcolor        $bgcolor        $text           $indicator
+client.unfocused        $in-bgcolor     $in-bgcolor     $in-text        $in-bgcolor
+client.focused_inactive $in-bgcolor     $in-bgcolor     $in-text        $in-bgcolor
+client.urgent           $u-bgcolor      $u-bgcolor      $text           $u-bgcolor 
 
 # Define color variable
 #set $bcolor #1b1b26
@@ -238,9 +241,13 @@ bindsym $mod+l exec betterlockscreen -l dim
 # ws alloc
 exec --no-startup-id i3-msg "workspace $ws2; exec firefox"
 exec --no-startup-id i3-msg "workspace $ws3; exec kitty tmux"
-exec --no-startup-id i3-msg "workspace $ws4; exec spotify --disable-gpu --disable-software-rasterizer" 
+exec --no-startup-id i3-msg "workspace $ws4; exec spotify"
 exec --no-startup-id i3-msg "workspace $ws5; exec thunar"   
 exec --no-startup-id i3-msg "workspace $ws6; exec obsidian"   
+
+# Assign apps to workspaces
+assign [class="obsidian"] $ws6
+assign [class="Spotify"] $ws4 
 
 
 	workspace $ws1 output eDP-1
