--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -18,9 +18,9 @@
 
 
 [colors]
-background = #07080f
-background-alt = #13131e
-foreground = #C5C8C6
+background = #1a1828 
+background-alt = #24223a
+foreground = #FFFFF
 primary = #FFFFFF
 secondary = #8ABEB7
 alert = #A54242
@@ -28,7 +28,7 @@ disabled = #707880
 
 [bar/example]
 width = 100%
-height = 25pt
+height = 28pt
 monitor = ${env:MONITOR:}
 ; dpi = 96
 
@@ -37,12 +37,13 @@ foreground = ${colors.foreground}
 
 line-size = 2pt
 
-separator = |
+separator = " | "
 separator-foreground = ${colors.disabled}
 
 font-0 = Hack:weight=bold:size=13;1
 modules-left = xworkspaces 2xwindow
-modules-right =  wlan battery pulseaudio memory cpu date
+modules-center = date
+modules-right =  wlan pulseaudio battery  
 
 
 ; wm-restack = generic
@@ -139,20 +140,21 @@ label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = %{F#66cc66}%essid%%{F-}
+label-connected = %essid%
+label-connected-foreground = #a6d189
 
 
 [module/eth]
 inherit = network-base
 interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
+label-connected = local_ip
 
 [module/date]
 type = internal/date
 interval = 1
 
-date =  %H:%M| %d-%m-%y|
-date-alt = "stop clicking"
+date =  %H:%M | %d-%m-%y
+date-alt = "Another day another slay"
 
 label = %date%
 label-foreground = ${colors.primary}
