--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -44,7 +44,7 @@ font-0 = Hack:weight=bold:size=13;1
 modules-left = xworkspaces 2xwindow
 modules-center = date
 modules-right =  wlan pulseaudio battery  
-
+padding = 1.75
 
 ; wm-restack = generic
 ; wm-restack = bspwm
