--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -43,7 +43,7 @@ separator-foreground = ${colors.disabled}
 font-0 = Hack:weight=bold:size=13;1
 modules-left = xworkspaces 2xwindow
 modules-center = date
-modules-right =  wlan pulseaudio battery  
+modules-right =  wlan pulseaudio brightnessctl battery  
 padding = 1.75
 
 ; wm-restack = generic
@@ -51,6 +51,16 @@ padding = 1.75
 ; wm-restack = i3
 
 ; override-redirect = true
+
+[module/brightnessctl]
+type = custom/script
+exec = /etc/polybar/brightnessctl.sh
+scroll-up = exec brightnessctl set +5%
+scroll-down = exec brightnessctl set 5%-
+interval = 0.5
+
+label =SUN%output%
+label-foreground = ${colors.foreground}
 
 [module/systray]
 type = internal/tray
@@ -164,18 +174,24 @@ type = internal/battery
 
 ; This is useful in case the battery never reports 100% charge
 ; Default: 100
-full-at = 100
+full-at = 95 
 
 ; format-low once this charge percentage is reached
 ; Default: 10
 ; New in version 3.6.0
-low-at = 5
+low-at = 25
 
 ; Use the following command to list batteries and adapters:
 ; $ ls -1 /sys/class/power_supply/
 battery = BAT0
 adapter = ADP1
-
+label-charging = BAT %percentage%%
+label-charging-foreground = #f9e2af 
+label-full= BAT %percentage%%
+label-full-foreground = #a6d189
+label-low = BAT %percentage%% 
+label-low-foreground = #ff0000
+label-discharging= BAT %percentage%%
 ; If an inotify event haven't been reported in this many
 ; seconds, manually poll for new values.
 ;
