--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -226,7 +226,7 @@ use-damage = true;
 # xrender-sync-fence = false
 
 # GLX backend: Use specified GLSL fragment shader for rendering window
-# contents. Read the man page for a detailed explanation of the interface.
+#ucontents. Read the man page for a detailed explanation of the interface.
 #
 # Can be set per-window using rules.
 #
