--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -5,7 +5,14 @@
 font_size 18.0
 # foreground #f4f5f7
 # background #292c3d
-background_opacity 0.7
+background_opacity 0.98
+
+
+#cursor_trail 200
+#cursor_trail_decay 0.1 0.4
+#cursor_trail_start_threshold 2
+
+
 # font_family Hack Nerd Font
 
 #: kitty has very powerful font management. You can configure
@@ -394,7 +401,7 @@ background_opacity 0.7
 
 #: Mouse {{{
 
-# mouse_hide_wait 3.0
+mouse_hide_wait -3.0
 
 #: Hide mouse cursor after the specified number of seconds of the
 #: mouse not being used. Set to zero to disable mouse cursor hiding.
