--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -20,15 +20,15 @@
 [colors]
 background = #1a1828 
 background-alt = #24223a
-foreground = #FFFFF
+foreground = #FFFFFF
 primary = #FFFFFF
 secondary = #8ABEB7
 alert = #A54242
 disabled = #707880
 
 [bar/example]
-width = 100%
-height = 28pt
+width =100%
+height = 30pt
 monitor = ${env:MONITOR:}
 ; dpi = 96
 
@@ -40,7 +40,9 @@ line-size = 2pt
 separator = " | "
 separator-foreground = ${colors.disabled}
 
-font-0 = Hack:weight=bold:size=13;1
+font-0 = Hack Nerd Font:weight=bold:size=14;1
+font-1 = Hack Nerd Font:weight=bold:size=10;1
+
 modules-left = xworkspaces 2xwindow
 modules-center = date
 modules-right =  wlan pulseaudio brightnessctl battery  
@@ -59,7 +61,7 @@ scroll-up = exec brightnessctl set +5%
 scroll-down = exec brightnessctl set 5%-
 interval = 0.5
 
-label =SUN%output%
+label = %output%
 label-foreground = ${colors.foreground}
 
 [module/systray]
@@ -105,13 +107,13 @@ label-unmounted-foreground = ${colors.disabled}
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = " VOL "
+format-volume-prefix = "   "
 format-volume-prefix-foreground = ${colors.primary}
 format-volume = <label-volume>
 
 label-volume = %percentage%%
 
-label-muted = muted
+label-muted = 󰝟 muted
 label-muted-foreground = ${colors.disabled}
 
 [module/xkeyboard]
@@ -143,9 +145,10 @@ label = %percentage:2%%
 [network-base]
 type = internal/network
 interval = 5
-format-connected = <label-connected>
+format-connected =  <label-connected>
 format-disconnected = <label-disconnected>
-label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
+label-disconnected =  disconnected
+label-disconnected-foreground= #ffa1a1
 
 [module/wlan]
 inherit = network-base
@@ -163,8 +166,9 @@ label-connected = local_ip
 type = internal/date
 interval = 1
 
-date =  %H:%M | %d-%m-%y
-date-alt = "Another day another slay"
+date = 󰥔 %H:%M |  %d-%m-%y
+date-alt = 󰫢 Another day, another slay 󰫢
+
 
 label = %date%
 label-foreground = ${colors.primary}
@@ -185,13 +189,13 @@ low-at = 25
 ; $ ls -1 /sys/class/power_supply/
 battery = BAT0
 adapter = ADP1
-label-charging = BAT %percentage%%
-label-charging-foreground = #f9e2af 
-label-full= BAT %percentage%%
+label-charging = 󰢜 %percentage%%
+label-charging-foreground = #a6d189
+label-full= 󱟢 %percentage%%
 label-full-foreground = #a6d189
 label-low = BAT %percentage%% 
 label-low-foreground = #ff0000
-label-discharging= BAT %percentage%%
+label-discharging= "󰁹 %percentage%%"
 ; If an inotify event haven't been reported in this many
 ; seconds, manually poll for new values.
 ;
