--- a/i3/config
+++ b/i3/config
@@ -239,7 +239,7 @@ client.urgent           $u-bgcolor      $u-bgcolor      $text           $u-bgcol
 
 
 # ws alloc
-exec --no-startup-id i3-msg "workspace $ws2; exec /home/raven/work/work.sh"
+exec --no-startup-id i3-msg "workspace $ws2; exec /home/raven/exec/work/work.sh"
 exec --no-startup-id i3-msg "workspace $ws3; exec kitty tmux"
 exec --no-startup-id i3-msg "workspace $ws4; exec spotify"
 exec --no-startup-id i3-msg "workspace $ws5; exec thunar"   
