--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -287,7 +287,10 @@ use-damage = true;
 # Exclude Polybar from all Picom effects
 # Exclude Polybar from rounded corners
 rounded-corners-exclude = [
-  "class_g = 'Polybar'"
+  "class_g = 'Polybar'",
+  "class_g = 'rofi'",
+  "class_g = 'drun'",
+  "class_g = 'rofi-drun'"
 ];
 
 
