--- a/i3/config
+++ b/i3/config
@@ -61,8 +61,15 @@ bindsym $mod+Return exec kitty
 # kill focused window
 bindsym $mod+shift+q kill
 
-# start dmenu (a program launcher)
-bindsym $mod+d exec /home/raven/exec/launcher.sh
+# start rofi (a program launcher)
+bindsym $mod+d exec /home/raven/exec/rofi.sh
+
+# start rofi with bookmarks
+bindsym $mod+b exec /home/raven/exec/bookmarks.sh
+
+# start clock app
+bindsym $mod+c exec gnome-clocks
+
 
 # A more modern dmenu replacement is rofi:
 #bindcode $mod+d exec "rofi -modi drun,run -show drun"
