--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -79,7 +79,7 @@ fade-out-step = 0.03;
 #
 # Range: 0.1 - 1.0
 # Default: 1.0 (disabled)
-frame-opacity = 1;
+frame-opacity = 0.8;
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
 #
@@ -95,8 +95,10 @@ frame-opacity = 1;
 # `transparent-clipping`.
 #
 # Default: 0 (disabled)
-corner-radius = 15 
-rounded-corners= true 
+# 15 is pretty good for macOS ass rounded corners
+# 5 for anything else
+corner-radius = 5
+rounded-corners= false 
 #################################
 #            Blur               #
 #################################
